--- a/client/views/index.html
+++ b/client/views/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html ng-app = 'myApp'>
   <head>
     <meta charset="utf-8">
     <title>Beer App</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="../public/css/main.css">
   </head>
-  <body>
-     <div class="container">
+  <body ng-controller = 'BeerController'>
+
+    <div class="container">
 
   <div class="add-beer">
 
     <h1 class="text-center">Add a Beer</h1>
 
-    <form>
+    <h2>{{message}}</h2>
+
+    <form name = 'beerForm'>
       <div class="form-group">
-        <input type="text" class="form-control" id="name" placeholder="Enter the beer name" required>
+        <input type="text" class="form-control" id="name" placeholder="Enter the beer name" ng-model = 'name' required>
       </div>
       <div class="form-group">
-        <input type="text" class="form-control" id="type" placeholder="Enter the beer type" required>
+        <input type="text" class="form-control" id="type" placeholder="Enter the beer type" required ng-model = 'type'>
       </div>
       <div class="form-group">
-        <input type="number" step="0.1" class="form-control" id="abv" placeholder="Enter the beer abv" required>
+        <input type="number" step="0.1" class="form-control" id="abv" placeholder="Enter the beer abv" required ng-model = 'abv'>
       </div>
-      <button type="submit" class="btn btn-primary btn-block">Submit</button>
+      <button type="submit" class="btn btn-primary btn-block" ng-click = 'postData("api/v1/beers")'>Submit</button>
+      <button type="button" class="btn btn-primary btn-block" ng-click = 'getData("api/v1/beers")'>Show Beers</button>
+
     </form>
 
   </div>
@@ -38,10 +43,10 @@
     <h2 class="text-center"></h2>
     <table class="table">
       <thead>
-        <tr>
-          <th>Name</th>
-          <th>Type</th>
-          <th>ABV</th>
+        <tr ng-repeat = 'beer in beers'>
+          <th>{{ beer.name }}</th>
+          <th>{{ beer.type }}</th>
+          <th>{{ beer.abv }}</th>
         </tr>
       </thead>
       <tbody id="all-beers"></tbody>
@@ -50,13 +55,23 @@
 
 
   </div>
-      <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.min.js" type="text/javascript"></script>
-    <script src="./js/app.js" type="text/javascript"></script>
-    <script src="./js/controllers.js" type="text/javascript"></script>
-    <script src="./js/directives.js" type="text/javascript"></script>
-    <script src="./js/filters.js" type="text/javascript"></script>
-    <script src="./js/services.js" type="text/javascript"></script>
+
+    <script type = 'text/javascript' src="//code.jquery.com/jquery-2.1.4.min.js">
+    </script>
+    <script type = 'text/javascript' src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">
+    </script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.min.js" type="text/javascript">
+    </script>
+    <script src="/js/app.js" type="text/javascript">
+    </script>
+    <script src="/js/controllers.js" type="text/javascript">
+    </script>
+    <script src="/js/directives.js" type="text/javascript">
+    </script>
+    <script src="/js/filters.js" type="text/javascript">
+    </script>
+    <script src="/js/services.js" type="text/javascript">
+    </script>
+
   </body>
 </html>
