--- a/client/views/index.html
+++ b/client/views/index.html
@@ -14,20 +14,19 @@
 
     <h1 class="text-center">Add a Beer</h1>
 
-    <h2>{{message}}</h2>
-
     <form name = 'beerForm'>
       <div class="form-group">
-        <input type="text" class="form-control" id="name" placeholder="Enter the beer name" ng-model = 'name' required>
+        <input type="text" class="form-control" id="name" placeholder="Enter the beer name" ng-model = 'beer.name' required>
       </div>
       <div class="form-group">
-        <input type="text" class="form-control" id="type" placeholder="Enter the beer type" required ng-model = 'type'>
+        <input type="text" class="form-control" id="type" placeholder="Enter the beer type" required ng-model = 'beer.type'>
       </div>
       <div class="form-group">
-        <input type="number" step="0.1" class="form-control" id="abv" placeholder="Enter the beer abv" required ng-model = 'abv'>
+        <input type="number" step="0.1" class="form-control" id="abv" placeholder="Enter the beer abv" required ng-model = 'beer.abv'>
       </div>
-      <button type="submit" class="btn btn-primary btn-block" ng-click = 'postData("api/v1/beers")'>Submit</button>
+      <button type="submit" class="btn btn-primary btn-block" ng-click = 'postData("api/v1/beers")' ng-hide = 'edit'>Submit</button>
       <button type="button" class="btn btn-primary btn-block" ng-click = 'getData("api/v1/beers")'>Show Beers</button>
+      <button type="submit" class="btn btn-primary btn-block" ng-show = 'edit' ng-click = 'updateBeer()'>Edit Beer</button>
 
     </form>
 
@@ -36,17 +35,27 @@
   <br><hr>
 
   <div class="message-section">
-    <p class="alert alert-info" role="alert" id="message"></p>
+    <p class="alert alert-info" role="alert" id="message" ng-show = 'success'>{{ message }}</p>
   </div>
 
   <div class="beer-section">
     <h2 class="text-center"></h2>
     <table class="table">
       <thead>
+        <tr>
+          <th>Name</th>
+          <th>Type</th>
+          <th>ABV</th>
+          <th colspan = '3'></th>
+        </tr>
         <tr ng-repeat = 'beer in beers'>
-          <th>{{ beer.name }}</th>
-          <th>{{ beer.type }}</th>
-          <th>{{ beer.abv }}</th>
+          <td>{{ beer.name }}</td>
+          <td>{{ beer.type }}</td>
+          <td>{{ beer.abv }}</td>
+          <td class="text-right">
+             <button class="btn btn-primary" ng-click="putBeer(beer._id)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>
+             <button class="btn btn-danger" ng-click="deleteBeer(beer._id)"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
+           </td>
         </tr>
       </thead>
       <tbody id="all-beers"></tbody>
